--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                   
                   <ul id="menu">
                     <a href="#"><li>Home</li></a>
-                    <a href="#"><li>About</li></a>
-                    <a href="#"><li>Info</li></a>
-                    <a href="#"><li>Contact</li></a>
-                    <a href="https://erikterwan.com/" target="_blank"><li>Show me more</li></a>
+                    <a href="#"><li>Sobre Nosotros</li></a>
+                    <a href="#"><li>Nuestros Productos</li></a>
+                    <a href="#"><li>Galeria</li></a>
+                    <a href=""><li>Contactanos</li></a>
                   </ul>
                 </div>
               </nav>
